--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -31,15 +31,17 @@
     "eslint": "7.6.0",
     "jest": "^24.7.1",
     "jsdom": "^15.0.0",
-    "karma": "^4.1.0",
+    "karma": "^6.0.0",
+    "karma-browserstack-launcher": "^1.6.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-rollup-preprocessor": "^7.0.0",
+    "karma-rollup-preprocessor": "^7.0.5",
     "karma-sinon": "^1.0.5",
-    "karma-typescript": "^4.0.0",
-    "karma-typescript-es6-transform": "^4.0.0",
+    "karma-typescript": "^5.2.0",
+    "karma-typescript-es6-transform": "^5.2.0",
     "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.2",
     "prettier": "1.19.0",
